# home-scada-core

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json  scada-core.code-workspace
analysis/: plot_archive.py
app/: main.cpp
archive/: arch.txt  archive.csv
clientConfig/: plcClientConfig.json
config/: ActuatorConfig.json  LightConfig.json  SensorConfig.json  SensorConfigLight.json  SensorConfigTemperatureMqtt.json
configTest.json/: ActuatorConfig.json  RuleThermostat.json  SensorConfig.json  Test_sensor.json
configs/actuators/: splitSystem.json  test.json
configs/clients/: plcClient.json
configs/rules/: rule.json  ruleT.json
configs/sensors/: SensorConfigLightMqtt.json  SensorConfigTemperatureMqtt.json  sensor.json  sensorT.json
configs/sources/: SourceConfigModbus.json  SourceConfigMqtt.json  source.json  sourceT.json  testObjectModbus.json
docs/: architecture.md  dev_notes.md  ui.md
firmware/esp32_mqtt/: platformio.ini
firmware/esp32_mqtt/include/: utils.hpp  utilsMcu.hpp
firmware/esp32_mqtt/src/: main.cpp  utilsMcu.cpp
include/: Actuator.hpp  ActuatorConfig.hpp  App.hpp  Application.hpp  Archive.hpp  ArchiveRecord.hpp  ArchiveReport.hpp  CompositionRoot.hpp  ConfigLoader.hpp  Enum.hpp  GenericActuator.hpp  IActuator.hpp  ITransport.hpp  LightConfig.hpp  Logger.hpp  ModbusClient.hpp  ModbusClientConfig.hpp  ModbusSource.hpp  ModbusSourceConfig.hpp  ModbusTransport.hpp  MqttCommandPublisher.hpp  MqttSource.hpp  MqttSourceConfig.hpp  MqttTransport.hpp  PgArchive.hpp  PlcWorker.hpp  RandomSource.hpp  Rule.hpp  RuleConfig.hpp  RuleConfigLight.hpp  RuleControlLight.hpp  RuleEngine.hpp  RuleLighting.hpp  RuleThermostat.hpp  RuleThermostatConfig.hpp  Sensor.hpp  SensorConfig.h  SensorConfig.hpp  SensorManager.hpp  SensorState.hpp  (+4 more)
info/: description.txt  serverConnetion.txt
modbusServer/: modbus_server.py  plc_server.py  split_sim_server.py
rule/: RuleConfigLight.json  ruleConfigThermostat.json
ruleConfig/: RuleConfig.json  RuleConfigLight.json  RuleConfigTermostat.json  RuleConfigThermostat.json  tempRuleCfg.json
sourceConfig/: ClientConfig.json  SourceConfigCoil.json  SourceConfigCoil2.json
src/: Actuator.cpp  ActuatorConfig.cpp  App.cpp  Application.cpp  Archive.cpp  ArchiveReport.cpp  CompositionRoot.cpp  ConfigLoader.cpp  Enum.cpp  FilePath.cpp  GenericActuator.cpp  LightConfig.cpp  Logger.cpp  ModbusClient.cpp  ModbusClientConfig.cpp  ModbusSource.cpp  ModbusSourceConfig.cpp  ModbusTransport.cpp  MqttCommandPublisher.cpp  MqttSource.cpp  MqttSourceConfig.cpp  MqttTransport.cpp  PgArchive.cpp  PlcWorker.cpp  RandomSource.cpp  RuleConfigLight.cpp  RuleControlLight.cpp  RuleEngine.cpp  RuleLighting.cpp  RuleThermostat.cpp  RuleThermostatConfig.cpp  Sensor.cpp  SensorConfig.cpp  SensorManager.cpp  SensorState.cpp  SmoothRandomSource.cpp  utils.cpp
tests/: modbus_test.cpp  testSource.cpp  testSource.hpp  tester.cpp  tester.hpp
